--- a/JobChaser/src/screens/joblist/joblist.component.html
+++ b/JobChaser/src/screens/joblist/joblist.component.html
@@ -1,5 +1,7 @@
-<div class="container flex justify-center items-center flex-col">
-  <div class="w-48 h-24 bg-red-300"></div>
+<div class="flex justify-center items-center flex-col">
+  <div class="w-48 h-24 bg-red-300">
+    <add-job-modal (jobAdded)="addNewJob($event)"></add-job-modal>
+  </div>
   <div>My Jobs</div>
   <div
     *ngFor="let job of jobList"
